--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <dsp4j.version>1.0.0-SNAPSHOT</dsp4j.version>
         <io.fabric8.kubernetes-client>2.2.8</io.fabric8.kubernetes-client>
         <io.fabric8.kubernetes-model>1.0.67</io.fabric8.kubernetes-model>
         <io.fabric8.openshift-client.version>2.2.8</io.fabric8.openshift-client.version>
@@ -65,7 +66,7 @@
         <jdbc.postgresql-driver.version>9.4-1201-jdbc41</jdbc.postgresql-driver.version>
         <joda-time.version>2.3</joda-time.version>
         <log4j.version>1.2.17</log4j.version>
-        <lsp4j.version>0.2.0</lsp4j.version>
+        <lsp4j.version>0.3.0</lsp4j.version>
         <net.java.dev.jna.version>4.1.0</net.java.dev.jna.version>
         <org.antlr.st4.version>4.0.7</org.antlr.st4.version>
         <org.antlr.version>3.5.2</org.antlr.version>
@@ -868,6 +869,11 @@
                 <groupId>org.eclipse.core</groupId>
                 <artifactId>org.eclipse.core.commands</artifactId>
                 <version>${org.eclipse.core.commands.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.dsp4j</groupId>
+                <artifactId>org.eclipse.dsp4j</artifactId>
+                <version>${dsp4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.equinox</groupId>
